fix: make overflow auto to hide bar when not needed

--- a/src/containers/DashboardPage/styles.module.css
+++ b/src/containers/DashboardPage/styles.module.css
@@ -39,7 +39,7 @@
     display: flex;
     gap: 2rem;
     flex-wrap: nowrap;
-    overflow-x: scroll;
+    overflow-x: auto;
     overflow-y: hidden;
     width: 100%;
 }
